--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primera pagina web</title>
 </head>
 <body>
-    
+    <dev>la primerda linea</dev>
+    <dev>segunda linea</dev>
+    <dev>tercera linea</dev>
 </body>
 </html>
